added voting functionality

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,8 +17,19 @@
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<link href="https://fonts.googleapis.com/css2?family=Francois+One&display=swap" rel="stylesheet">
-		<script src="https://kit.fontawesome.com/c75ab286f1.js" crossorigin="anonymous"></script>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Francois+One&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap"
+			rel="stylesheet"
+		/>
+
+		<script
+			src="https://kit.fontawesome.com/c75ab286f1.js"
+			crossorigin="anonymous"
+		></script>
 		<title>Pollap</title>
 	</head>
 	<body>
