--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,7 +30,7 @@
 			src="https://kit.fontawesome.com/c75ab286f1.js"
 			crossorigin="anonymous"
 		></script>
-		<title>Pollap</title>
+		<title>VOTICA</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
